--- a/.github/workflows/formal-verification.yml
+++ b/.github/workflows/formal-verification.yml
@@ -12,18 +12,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Java
-        uses: actions/setup-java@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          distribution: temurin
-          java-version: '21'
+          python-version: '3.11'
 
-      - name: Install Aya CLI
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y curl
-          scripts/install_aya.sh
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip
 
       - name: Run Aya checks
-        run: |
-          scripts/run_aya.sh
+        run: scripts/run_aya.sh
